<resources>
    <string name="app_name">Daily</string>

    <string name="login_id">手机号/QQ号/微信号/邮箱</string>
    <string name="password">密码</string>
    <string name="login">登    陆</string>

    <string name="loading">验证登录信息</string>
    <string name="complete">登 陆 成 功</string>
    <string name="sign_up">还没有账户？点此注册</string>
    <string name="forget_password">忘记密码</string>

    <string name="mobile">手机号</string>
    <string name="name">姓名</string>
    <string name="repassword">再次输入密码</string>
    <string name="signup">注    册</string>

    <string name="back">返回</string>
    <!--登陆的报错信息-->
    <string name="login_error">用户名或者密码有误</string>


    <!--菜单-->
    <string name="introduction">去填写您的个人介绍吧！</string>
    <string-array name="navDrawerItems">
        <item>通知</item>
        <item>工作</item>
        <item>工具</item>
        <item>业绩</item>
        <item>联系人</item>
    </string-array>
    <string-array name="navDrawerIcons">
        <item>@drawable/ic_all_done</item>
        <item>@drawable/ic_cloud_off</item>
        <item>@drawable/ic_create</item>
        <item>@drawable/ic_delete</item>
        <item>@drawable/ic_inbox</item>
    </string-array>


    <!--联系人-->
    <string name="mobile_contact">手机通讯录</string>
    <string name="daily_user_contact">Daily好友</string>
    <string name="my_group_contact">我的群组</string>
    <string name="special_contact">特别关注</string>


    <!--通用-->
    <string name="empty">空空如也</string>

</resources>
